--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.4.0",
     "sass": "^1.86.0",
     "zustand": "^5.0.3"
   },
